profilelist1exp/unpackaged/objects/Partner_Program_Track__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Track_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Track(Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>Country__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Secondary Partner Type</relationshipLabel>
        <relationshipName>Secondary_Partner_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>Country_Code__c + &apos; - &apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Track_Country__c</fullName>
        <formula>Country_Code__c + &apos; - &apos; + Primary_Partner_Track__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Track Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Track__c</fullName>
        <label>Primary Partner Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Partner_Type_Country__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Secondary Partner Type Country</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Translated_Partner_Type__c</fullName>
        <label>Translated Partner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Secondary Partner Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Translated_Partner_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Program Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Partner Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>